pydb/sqlsystem/SQLParser.py
# Generated from SQL.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SQLParser ( Parser ):

    grammarFileName = "SQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'CREATE'", "'DATABASE'", "'DROP'", 
                     "'SHOW'", "'DATABASES'", "'USE'", "'TABLES'", "'INDEXES'", 
                     "'LOAD'", "'DATA'", "'INFILE'", "'INTO'", "'TABLE'", 
                     "'STORE'", "'OUTFILE'", "'FROM'", "'('", "')'", "'DESC'", 
                     "'INSERT'", "'VALUES'", "'DELETE'", "'WHERE'", "'UPDATE'", 
                     "'SET'", "'SELECT'", "'GROUP'", "'BY'", "'LIMIT'", 
                     "'OFFSET'", "'ALTER'", "'ADD'", "'INDEX'", "'PRIMARY'", 
                     "'KEY'", "'FOREIGN'", "'CONSTRAINT'", "'REFERENCES'", 
                     "'UNIQUE'", "','", "'NOT'", "'DEFAULT'", "'INT'", "'VARCHAR'", 
                     "'FLOAT'", "'AND'", "'.'", "'*'", "'='", "'<'", "'<='", 
                     "'>'", "'>='", "'<>'", "'COUNT'", "'AVG'", "'MAX'", 
                     "'MIN'", "'SUM'", "'NULL'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "EqualOrAssign", "Less", 
                      "LessEqual", "Greater", "GreaterEqual", "NotEqual", 
                      "Count", "Average", "Max", "Min", "Sum", "Null", "Identifier", 
                      "Integer", "String", "Float", "Whitespace", "Annotation" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_db_statement = 2
    RULE_io_statement = 3
    RULE_table_statement = 4
    RULE_select_table = 5
    RULE_alter_statement = 6
    RULE_field_list = 7
    RULE_field = 8
    RULE_type_ = 9
    RULE_value_lists = 10
    RULE_value_list = 11
    RULE_value = 12
    RULE_where_and_clause = 13
    RULE_where_clause = 14
    RULE_column = 15
    RULE_expression = 16
    RULE_set_clause = 17
    RULE_selectors = 18
    RULE_selector = 19
    RULE_identifiers = 20
    RULE_operate = 21
    RULE_aggregator = 22

    ruleNames =  [ "program", "statement", "db_statement", "io_statement", 
                   "table_statement", "select_table", "alter_statement", 
                   "field_list", "field", "type_", "value_lists", "value_list", 
                   "value", "where_and_clause", "where_clause", "column", 
                   "expression", "set_clause", "selectors", "selector", 
                   "identifiers", "operate", "aggregator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    EqualOrAssign=50
    Less=51
    LessEqual=52
    Greater=53
    GreaterEqual=54
    NotEqual=55
    Count=56
    Average=57
    Max=58
    Min=59
    Sum=60
    Null=61
    Identifier=62
    Integer=63
    String=64
    Float=65
    Whitespace=66
    Annotation=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SQLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.StatementContext)
            else:
                return self.getTypedRuleContext(SQLParser.StatementContext,i)


        def getRuleIndex(self):
            return SQLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SQLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SQLParser.T__1) | (1 << SQLParser.T__3) | (1 << SQLParser.T__4) | (1 << SQLParser.T__6) | (1 << SQLParser.T__9) | (1 << SQLParser.T__14) | (1 << SQLParser.T__19) | (1 << SQLParser.T__20) | (1 << SQLParser.T__22) | (1 << SQLParser.T__24) | (1 << SQLParser.T__26) | (1 << SQLParser.T__31) | (1 << SQLParser.Null))) != 0) or _la==SQLParser.Annotation:
                self.state = 46
                self.statement()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(SQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def db_statement(self):
            return self.getTypedRuleContext(SQLParser.Db_statementContext,0)


        def io_statement(self):
            return self.getTypedRuleContext(SQLParser.Io_statementContext,0)


        def table_statement(self):
            return self.getTypedRuleContext(SQLParser.Table_statementContext,0)


        def alter_statement(self):
            return self.getTypedRuleContext(SQLParser.Alter_statementContext,0)


        def Annotation(self):
            return self.getToken(SQLParser.Annotation, 0)

        def Null(self):
            return self.getToken(SQLParser.Null, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SQLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.db_statement()
                self.state = 55
                self.match(SQLParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.io_statement()
                self.state = 58
                self.match(SQLParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.table_statement()
                self.state = 61
                self.match(SQLParser.T__0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.alter_statement()
                self.state = 64
                self.match(SQLParser.T__0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 66
                self.match(SQLParser.Annotation)
                self.state = 67
                self.match(SQLParser.T__0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 68
                self.match(SQLParser.Null)
                self.state = 69
                self.match(SQLParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Db_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQLParser.RULE_db_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Show_dbsContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_dbs" ):
                return visitor.visitShow_dbs(self)
            else:
                return visitor.visitChildren(self)


    class Drop_dbContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDrop_db" ):
                return visitor.visitDrop_db(self)
            else:
                return visitor.visitChildren(self)


    class Show_tablesContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_tables" ):
                return visitor.visitShow_tables(self)
            else:
                return visitor.visitChildren(self)


    class Create_dbContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreate_db" ):
                return visitor.visitCreate_db(self)
            else:
                return visitor.visitChildren(self)


    class Use_dbContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUse_db" ):
                return visitor.visitUse_db(self)
            else:
                return visitor.visitChildren(self)


    class Show_indexesContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_indexes" ):
                return visitor.visitShow_indexes(self)
            else:
                return visitor.visitChildren(self)



    def db_statement(self):

        localctx = SQLParser.Db_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_db_statement)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = SQLParser.Create_dbContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(SQLParser.T__1)
                self.state = 73
                self.match(SQLParser.T__2)
                self.state = 74
                self.match(SQLParser.Identifier)
                pass

            elif la_ == 2:
                localctx = SQLParser.Drop_dbContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.match(SQLParser.T__3)
                self.state = 76
                self.match(SQLParser.T__2)
                self.state = 77
                self.match(SQLParser.Identifier)
                pass

            elif la_ == 3:
                localctx = SQLParser.Show_dbsContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.match(SQLParser.T__4)
                self.state = 79
                self.match(SQLParser.T__5)
                pass

            elif la_ == 4:
                localctx = SQLParser.Use_dbContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.match(SQLParser.T__6)
                self.state = 81
                self.match(SQLParser.Identifier)
                pass

            elif la_ == 5:
                localctx = SQLParser.Show_tablesContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 82
                self.match(SQLParser.T__4)
                self.state = 83
                self.match(SQLParser.T__7)
                pass

            elif la_ == 6:
                localctx = SQLParser.Show_indexesContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.match(SQLParser.T__4)
                self.state = 85
                self.match(SQLParser.T__8)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Io_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQLParser.RULE_io_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Store_dataContext(Io_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Io_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def String(self):
            return self.getToken(SQLParser.String, 0)
        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStore_data" ):
                return visitor.visitStore_data(self)
            else:
                return visitor.visitChildren(self)


    class Load_dataContext(Io_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Io_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def String(self):
            return self.getToken(SQLParser.String, 0)
        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoad_data" ):
                return visitor.visitLoad_data(self)
            else:
                return visitor.visitChildren(self)



    def io_statement(self):

        localctx = SQLParser.Io_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_io_statement)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SQLParser.T__9]:
                localctx = SQLParser.Load_dataContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(SQLParser.T__9)
                self.state = 89
                self.match(SQLParser.T__10)
                self.state = 90
                self.match(SQLParser.T__11)
                self.state = 91
                self.match(SQLParser.String)
                self.state = 92
                self.match(SQLParser.T__12)
                self.state = 93
                self.match(SQLParser.T__13)
                self.state = 94
                self.match(SQLParser.Identifier)
                pass
            elif token in [SQLParser.T__14]:
                localctx = SQLParser.Store_dataContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(SQLParser.T__14)
                self.state = 96
                self.match(SQLParser.T__10)
                self.state = 97
                self.match(SQLParser.T__15)
                self.state = 98
                self.match(SQLParser.String)
                self.state = 99
                self.match(SQLParser.T__16)
                self.state = 100
                self.match(SQLParser.T__13)
                self.state = 101
                self.match(SQLParser.Identifier)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Table_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQLParser.RULE_table_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Delete_from_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)
        def where_and_clause(self):
            return self.getTypedRuleContext(SQLParser.Where_and_clauseContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDelete_from_table" ):
                return visitor.visitDelete_from_table(self)
            else:
                return visitor.visitChildren(self)


    class Insert_into_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)
        def value_lists(self):
            return self.getTypedRuleContext(SQLParser.Value_listsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsert_into_table" ):
                return visitor.visitInsert_into_table(self)
            else:
                return visitor.visitChildren(self)


    class Create_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)
        def field_list(self):
            return self.getTypedRuleContext(SQLParser.Field_listContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreate_table" ):
                return visitor.visitCreate_table(self)
            else:
                return visitor.visitChildren(self)


    class Describe_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDescribe_table" ):
                return visitor.visitDescribe_table(self)
            else:
                return visitor.visitChildren(self)


    class Select_table_Context(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def select_table(self):
            return self.getTypedRuleContext(SQLParser.Select_tableContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_table_" ):
                return visitor.visitSelect_table_(self)
            else:
                return visitor.visitChildren(self)


    class Drop_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDrop_table" ):
                return visitor.visitDrop_table(self)
            else:
                return visitor.visitChildren(self)


    class Update_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)
        def set_clause(self):
            return self.getTypedRuleContext(SQLParser.Set_clauseContext,0)

        def where_and_clause(self):
            return self.getTypedRuleContext(SQLParser.Where_and_clauseContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdate_table" ):
                return visitor.visitUpdate_table(self)
            else:
                return visitor.visitChildren(self)



    def table_statement(self):

        localctx = SQLParser.Table_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_table_statement)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SQLParser.T__1]:
                localctx = SQLParser.Create_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(SQLParser.T__1)
                self.state = 105
                self.match(SQLParser.T__13)
                self.state = 106
                self.match(SQLParser.Identifier)
                self.state = 107
                self.match(SQLParser.T__17)
                self.state = 108
                self.field_list()
                self.state = 109
                self.match(SQLParser.T__18)
                pass
            elif token in [SQLParser.T__3]:
                localctx = SQLParser.Drop_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(SQLParser.T__3)
                self.state = 112
                self.match(SQLParser.T__13)
                self.state = 113
                self.match(SQLParser.Identifier)
                pass
            elif token in [SQLParser.T__19]:
                localctx = SQLParser.Describe_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.match(SQLParser.T__19)
                self.state = 115
                self.match(SQLParser.Identifier)
                pass
            elif token in [SQLParser.T__20]:
                localctx = SQLParser.Insert_into_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.match(SQLParser.T__20)
                self.state = 117
                self.match(SQLParser.T__12)
                self.state = 118
                self.match(SQLParser.Identifier)
                self.state = 119
                self.match(SQLParser.T__21)
                self.state = 120
                self.value_lists()
                pass
            elif token in [SQLParser.T__22]:
                localctx = SQLParser.Delete_from_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                self.match(SQLParser.T__22)
                self.state = 122
                self.match(SQLParser.T__16)
                self.state = 123
                self.match(SQLParser.Identifier)
                self.state = 124
                self.match(SQLParser.T__23)
                self.state = 125
                self.where_and_clause()
                pass
            elif token in [SQLParser.T__24]:
                localctx = SQLParser.Update_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 126
                self.match(SQLParser.T__24)
                self.state = 127
                self.match(SQLParser.Identifier)
                self.state = 128
                self.match(SQLParser.T__25)
                self.state = 129
                self.set_clause()
                self.state = 130
                self.match(SQLParser.T__23)
                self.state = 131
                self.where_and_clause()
                pass
            elif token in [SQLParser.T__26]:
                localctx = SQLParser.Select_table_Context(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 133
                self.select_table()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_tableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectors(self):
            return self.getTypedRuleContext(SQLParser.SelectorsContext,0)


        def identifiers(self):
            return self.getTypedRuleContext(SQLParser.IdentifiersContext,0)


        def where_and_clause(self):
            return self.getTypedRuleContext(SQLParser.Where_and_clauseContext,0)


        def column(self):
            return self.getTypedRuleContext(SQLParser.ColumnContext,0)


        def Integer(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.Integer)
            else:
                return self.getToken(SQLParser.Integer, i)

        def getRuleIndex(self):
            return SQLParser.RULE_select_table

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_table" ):
                return visitor.visitSelect_table(self)
            else:
                return visitor.visitChildren(self)




    def select_table(self):

        localctx = SQLParser.Select_tableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_select_table)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(SQLParser.T__26)
            self.state = 137
            self.selectors()
            self.state = 138
            self.match(SQLParser.T__16)
            self.state = 139
            self.identifiers()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLParser.T__23:
                self.state = 140
                self.match(SQLParser.T__23)
                self.state = 141
                self.where_and_clause()


            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLParser.T__27:
                self.state = 144
                self.match(SQLParser.T__27)
                self.state = 145
                self.match(SQLParser.T__28)
                self.state = 146
                self.column()


            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLParser.T__29:
                self.state = 149
                self.match(SQLParser.T__29)
                self.state = 150
                self.match(SQLParser.Integer)
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SQLParser.T__30:
                    self.state = 151
                    self.match(SQLParser.T__30)
                    self.state = 152
                    self.match(SQLParser.Integer)




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Alter_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQLParser.RULE_alter_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Alter_table_drop_pkContext(Alter_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Alter_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlter_table_drop_pk" ):
                return visitor.visitAlter_table_drop_pk(self)
            else:
                return visitor.visitChildren(self)


    class Alter_table_add_foreign_keyContext(Alter_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Alter_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.Identifier)
            else:
                return self.getToken(SQLParser.Identifier, i)
        def identifiers(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.IdentifiersContext)
            else:
                return self.getTypedRuleContext(SQLParser.IdentifiersContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlter_table_add_foreign_key" ):
                return visitor.visitAlter_table_add_foreign_key(self)
            else:
                return visitor.visitChildren(self)


    class Alter_table_add_uniqueContext(Alter_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Alter_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)
        def identifiers(self):
            return self.getTypedRuleContext(SQLParser.IdentifiersContext,0)

